basic tables for grades

--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -1,1 +1,6 @@
-[]
+- "!include public_classes.yaml"
+- "!include public_grades.yaml"
+- "!include public_groups.yaml"
+- "!include public_subjects.yaml"
+- "!include public_user_group.yaml"
+- "!include public_users.yaml"
