full name computed field

--- a/school_track_hasura/metadata/databases/defualt/tables/public_users.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_users.yaml
@@ -1,3 +1,9 @@
 table:
   name: users
   schema: public
+computed_fields:
+  - name: full_name
+    definition:
+      function:
+        name: user_full_name
+        schema: public
