--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   go_router: ^12.0.0
   gql_http_link: ^1.0.1
+  gql_websocket_link: ^1.1.0
   intl: ^0.18.1
 
 dev_dependencies:
