--- a/school_track_hasura/metadata/databases/defualt/tables/public_classes.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_classes.yaml
@@ -2,6 +2,9 @@ table:
   name: classes
   schema: public
 object_relationships:
+  - name: group
+    using:
+      foreign_key_constraint_on: group_id
   - name: subject
     using:
       foreign_key_constraint_on: subject_id
