--- a/school_track_hasura/metadata/databases/defualt/tables/public_groups.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_groups.yaml
@@ -1,3 +1,15 @@
 table:
   name: groups
   schema: public
+object_relationships:
+  - name: homeroom_teacher
+    using:
+      foreign_key_constraint_on: homeroom_teacher_id
+array_relationships:
+  - name: user_groups
+    using:
+      foreign_key_constraint_on:
+        column: group_id
+        table:
+          name: user_group
+          schema: public
