--- a/school_track_hasura/metadata/databases/defualt/tables/public_user_group.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_user_group.yaml
@@ -1,3 +1,7 @@
 table:
   name: user_group
   schema: public
+object_relationships:
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
