--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -1,6 +1,8 @@
 - "!include public_classes.yaml"
 - "!include public_grades.yaml"
 - "!include public_groups.yaml"
+- "!include public_lesson_periods.yaml"
+- "!include public_lessons.yaml"
 - "!include public_subjects.yaml"
 - "!include public_user_group.yaml"
 - "!include public_users.yaml"
