attendance table and views

--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -1,3 +1,4 @@
+- "!include public_attendance.yaml"
 - "!include public_classes.yaml"
 - "!include public_grades.yaml"
 - "!include public_groups.yaml"
