--- a/school_track_hasura/metadata/databases/defualt/tables/public_classes.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_classes.yaml
@@ -9,6 +9,13 @@ object_relationships:
     using:
       foreign_key_constraint_on: subject_id
 array_relationships:
+  - name: attendances
+    using:
+      foreign_key_constraint_on:
+        column: class_id
+        table:
+          name: attendance
+          schema: public
   - name: grades
     using:
       foreign_key_constraint_on:
