--- a/school_track_hasura/metadata/databases/defualt/tables/public_lesson_periods.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_lesson_periods.yaml
@@ -9,3 +9,12 @@ array_relationships:
         table:
           name: lessons
           schema: public
+select_permissions:
+  - role: student
+    permission:
+      columns:
+        - id
+        - length
+        - start
+      filter: {}
+    comment: ""
