--- a/school_track_hasura/metadata/databases/defualt/tables/public_subjects.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_subjects.yaml
@@ -1,3 +1,11 @@
 table:
   name: subjects
   schema: public
+select_permissions:
+  - role: student
+    permission:
+      columns:
+        - id
+        - title
+      filter: {}
+    comment: ""
