--- a/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
@@ -1,3 +1,20 @@
 table:
   name: attendance
   schema: public
+select_permissions:
+  - role: student
+    permission:
+      columns:
+        - date
+        - class_id
+        - id
+        - period_id
+        - student_id
+        - techer_id
+        - comment
+        - created_at
+        - type
+      filter:
+        student_id:
+          _eq: X-Hasura-User-Id
+    comment: ""
