--- a/school_track_hasura/metadata/databases/defualt/tables/public_events.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_events.yaml
@@ -8,3 +8,16 @@ object_relationships:
   - name: user
     using:
       foreign_key_constraint_on: user_id
+select_permissions:
+  - role: student
+    permission:
+      columns:
+        - date
+        - class_id
+        - id
+        - period_id
+        - user_id
+        - comment
+        - title
+      filter: {}
+    comment: ""
