--- a/school_track_hasura/metadata/databases/defualt/tables/public_groups.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_groups.yaml
@@ -13,3 +13,16 @@ array_relationships:
         table:
           name: user_group
           schema: public
+select_permissions:
+  - role: student
+    permission:
+      columns:
+        - homeroom_teacher_id
+        - id
+        - name
+      filter:
+        user_groups:
+          user:
+            id:
+              _eq: X-Hasura-User-Id
+    comment: ""
