--- a/school_track_hasura/metadata/databases/defualt/tables/public_groups.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_groups.yaml
@@ -26,3 +26,11 @@ select_permissions:
             id:
               _eq: X-Hasura-User-Id
     comment: ""
+  - role: teacher
+    permission:
+      columns:
+        - homeroom_teacher_id
+        - id
+        - name
+      filter: {}
+    comment: ""
