--- a/school_track_hasura/metadata/databases/defualt/tables/public_lesson_periods.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_lesson_periods.yaml
@@ -18,3 +18,11 @@ select_permissions:
         - start
       filter: {}
     comment: ""
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - length
+        - start
+      filter: {}
+    comment: ""
