--- a/school_track_hasura/metadata/databases/defualt/tables/public_messages.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_messages.yaml
@@ -26,6 +26,20 @@ insert_permissions:
         - title
         - sent_on
     comment: ""
+  - role: teacher
+    permission:
+      check:
+        sender_id:
+          _eq: X-Hasura-User-Id
+      columns:
+        - read_receipt
+        - id
+        - recipient_id
+        - sender_id
+        - content
+        - title
+        - sent_on
+    comment: ""
 select_permissions:
   - role: student
     permission:
@@ -41,8 +55,31 @@ select_permissions:
         recipient_id:
           _eq: X-Hasura-User-Id
     comment: ""
+  - role: teacher
+    permission:
+      columns:
+        - read_receipt
+        - id
+        - recipient_id
+        - sender_id
+        - content
+        - title
+        - sent_on
+      filter:
+        recipient_id:
+          _eq: X-Hasura-User-Id
+    comment: ""
 update_permissions:
   - role: student
+    permission:
+      columns:
+        - read_receipt
+      filter:
+        recipient_id:
+          _eq: X-Hasura-User-Id
+      check: null
+    comment: ""
+  - role: teacher
     permission:
       columns:
         - read_receipt
