--- a/school_track_hasura/metadata/databases/defualt/tables/public_subjects.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_subjects.yaml
@@ -9,3 +9,10 @@ select_permissions:
         - title
       filter: {}
     comment: ""
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - title
+      filter: {}
+    comment: ""
