--- a/school_track_hasura/metadata/databases/defualt/tables/public_users.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_users.yaml
@@ -26,3 +26,13 @@ select_permissions:
         - full_name
       filter: {}
     comment: ""
+  - role: teacher
+    permission:
+      columns:
+        - id
+        - first_name
+        - last_name
+      computed_fields:
+        - full_name
+      filter: {}
+    comment: ""
