--- a/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
@@ -1,6 +1,31 @@
 table:
   name: attendance
   schema: public
+object_relationships:
+  - name: class
+    using:
+      foreign_key_constraint_on: class_id
+insert_permissions:
+  - role: teacher
+    permission:
+      check:
+        _and:
+          - techer_id:
+              _eq: X-Hasura-User-Id
+          - class:
+              teacher_id:
+                _eq: X-Hasura-User-Id
+      columns:
+        - date
+        - class_id
+        - id
+        - period_id
+        - student_id
+        - techer_id
+        - comment
+        - created_at
+        - type
+    comment: ""
 select_permissions:
   - role: student
     permission:
@@ -17,4 +42,31 @@ select_permissions:
       filter:
         student_id:
           _eq: X-Hasura-User-Id
+    comment: ""
+  - role: teacher
+    permission:
+      columns:
+        - date
+        - class_id
+        - id
+        - period_id
+        - student_id
+        - techer_id
+        - comment
+        - created_at
+        - type
+      filter: {}
+    comment: ""
+update_permissions:
+  - role: teacher
+    permission:
+      columns: []
+      filter:
+        _and:
+          - techer_id:
+              _eq: X-Hasura-User-Id
+          - class:
+              teacher_id:
+                _eq: X-Hasura-User-Id
+      check: null
     comment: ""
