--- a/school_track_hasura/metadata/databases/defualt/tables/public_user_group.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_user_group.yaml
@@ -5,3 +5,13 @@ object_relationships:
   - name: user
     using:
       foreign_key_constraint_on: user_id
+select_permissions:
+  - role: teacher
+    permission:
+      columns:
+        - group_id
+        - id
+        - user_id
+      filter: {}
+      allow_aggregations: true
+    comment: ""
