--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.18.1
   jwt_decoder: ^2.0.1
   provider: ^6.0.5
+  built_collection: ^5.1.1
 
 dev_dependencies:
   flutter_test:
