--- a/school_track_hasura/metadata/databases/defualt/tables/public_users.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_users.yaml
@@ -2,6 +2,13 @@ table:
   name: users
   schema: public
 array_relationships:
+  - name: attendances
+    using:
+      foreign_key_constraint_on:
+        column: student_id
+        table:
+          name: attendance
+          schema: public
   - name: grades
     using:
       foreign_key_constraint_on:
