--- a/school_track_hasura/metadata/databases/databases.yaml
+++ b/school_track_hasura/metadata/databases/databases.yaml
@@ -7,3 +7,4 @@
       isolation_level: read-committed
       use_prepared_statements: false
   tables: "!include defualt/tables/tables.yaml"
+  functions: "!include defualt/functions/functions.yaml"
