--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -3,9 +3,13 @@
 - "!include public_events.yaml"
 - "!include public_grades.yaml"
 - "!include public_groups.yaml"
+- "!include public_inbox_entries.yaml"
 - "!include public_lesson_periods.yaml"
 - "!include public_lessons.yaml"
 - "!include public_messages.yaml"
+- "!include public_recipient_group.yaml"
+- "!include public_recipient_user.yaml"
+- "!include public_recipients.yaml"
 - "!include public_subjects.yaml"
 - "!include public_user_group.yaml"
 - "!include public_users.yaml"
