auth related tables

--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -1,4 +1,6 @@
+- "!include public_admins.yaml"
 - "!include public_attendance.yaml"
+- "!include public_auth.yaml"
 - "!include public_classes.yaml"
 - "!include public_events.yaml"
 - "!include public_grades.yaml"
@@ -7,6 +9,7 @@
 - "!include public_lesson_periods.yaml"
 - "!include public_lessons.yaml"
 - "!include public_messages.yaml"
+- "!include public_parents.yaml"
 - "!include public_recipient_group.yaml"
 - "!include public_recipient_user.yaml"
 - "!include public_recipients.yaml"
