--- a/auth_server/package.json
+++ b/auth_server/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.14",
     "@types/bcrypt": "^5.0.1",
     "bcrypt": "^5.1.1",
     "jose": "^5.0.1",
