--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -14,10 +14,13 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   gql_websocket_link: ^1.1.0
-  intl: ^0.18.1
+  intl: ^0.17.0
   jwt_decoder: ^2.0.1
   provider: ^6.0.5
   built_collection: ^5.1.1
+  openapi_generator_annotations: ^4.13.1
+  openapi:
+    path: "dart_openapi_api"
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +29,7 @@ dev_dependencies:
   ferry_generator: ^0.8.1
   build_runner: ^2.4.6
   freezed: ^2.4.5
+  openapi_generator: ^4.13.1
 
 flutter:
   uses-material-design: true
