--- a/school_track_hasura/metadata/databases/defualt/tables/public_classes.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_classes.yaml
@@ -8,6 +8,9 @@ object_relationships:
   - name: subject
     using:
       foreign_key_constraint_on: subject_id
+  - name: teacher
+    using:
+      foreign_key_constraint_on: teacher_id
 array_relationships:
   - name: attendances
     using:
