--- a/school_track_hasura/metadata/databases/defualt/tables/public_lessons.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_lessons.yaml
@@ -5,6 +5,15 @@ object_relationships:
   - name: class
     using:
       foreign_key_constraint_on: class_id
+  - name: room
+    using:
+      manual_configuration:
+        column_mapping:
+          room_id: id
+        insertion_order: null
+        remote_table:
+          name: rooms
+          schema: public
 select_permissions:
   - role: student
     permission:
