reworked class related screens

--- a/school_track_hasura/metadata/databases/defualt/tables/public_grades.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_grades.yaml
@@ -56,6 +56,7 @@ select_permissions:
         - comment
         - added_on
       filter: {}
+      allow_aggregations: true
     comment: ""
 update_permissions:
   - role: teacher
