--- a/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
@@ -56,6 +56,7 @@ select_permissions:
         - created_at
         - type
       filter: {}
+      allow_aggregations: true
     comment: ""
 update_permissions:
   - role: teacher
