--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   openapi_generator_annotations: ^4.13.1
   chopper: ^6.1.1
   json_annotation: ^4.8.1
+  built_value: ^8.7.0
 
 dev_dependencies:
   flutter_test:
