login via qr code scan

--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -10,6 +10,7 @@
 - "!include public_lessons.yaml"
 - "!include public_messages.yaml"
 - "!include public_parents.yaml"
+- "!include public_qr_auth.yaml"
 - "!include public_recipient_group.yaml"
 - "!include public_recipient_user.yaml"
 - "!include public_recipients.yaml"
