--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -22,7 +22,11 @@ dependencies:
   chopper: ^6.1.1
   json_annotation: ^4.8.1
   built_value: ^8.7.0
-
+  qr_flutter: ^4.1.0
+  uuid: ^3.0.7
+  bcrypt: ^1.1.3
+  mobile_scanner: ^3.5.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
