--- a/school_track_hasura/metadata/databases/defualt/tables/public_lessons.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_lessons.yaml
@@ -5,6 +5,9 @@ object_relationships:
   - name: class
     using:
       foreign_key_constraint_on: class_id
+  - name: period
+    using:
+      foreign_key_constraint_on: period_id
   - name: room
     using:
       manual_configuration:
