attendance checking with nfc tags

--- a/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/public_attendance.yaml
@@ -42,6 +42,7 @@ select_permissions:
       filter:
         student_id:
           _eq: X-Hasura-User-Id
+      allow_aggregations: true
     comment: ""
   - role: teacher
     permission:
