--- a/school_track_front/android/app/src/main/AndroidManifest.xml
+++ b/school_track_front/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.NFC"/>
+   
     <application
         android:label="school_track_front"
         android:name="${applicationName}"
