--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   uuid: ^3.0.7
   bcrypt: ^1.1.3
   mobile_scanner: ^3.5.2
+  flutter_nfc_kit: ^3.3.3
+  ndef: ^0.3.1
   
 dev_dependencies:
   flutter_test:
