--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -9,6 +9,7 @@
 - "!include public_lesson_periods.yaml"
 - "!include public_lessons.yaml"
 - "!include public_messages.yaml"
+- "!include public_nfc_attendance.yaml"
 - "!include public_parents.yaml"
 - "!include public_qr_auth.yaml"
 - "!include public_recipient_group.yaml"
