--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -11,15 +11,17 @@ dependencies:
   ferry_flutter: ^0.8.1
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   freezed_annotation: ^2.4.1
   go_router: ^12.0.0
   gql_websocket_link: ^1.1.0
-  intl: ^0.17.0
+  intl: ^0.18.1
   jwt_decoder: ^2.0.1
   provider: ^6.0.5
   built_collection: ^5.1.1
   openapi_generator_annotations: ^4.13.1
-  chopper: ^6.1.1
+  chopper: ^7.0.9
   json_annotation: ^4.8.1
   built_value: ^8.7.0
   qr_flutter: ^4.1.0
@@ -35,10 +37,11 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   ferry_generator: ^0.8.1
   build_runner: ^2.4.6
-  chopper_generator: ^6.0.0
+  chopper_generator: ^7.0.6
   swagger_dart_code_generator: ^2.10.4
   freezed: ^2.4.5
   json_serializable: ^6.6.1
 
 flutter:
   uses-material-design: true
+  generate: true
