--- a/school_track_front/pubspec.yaml
+++ b/school_track_front/pubspec.yaml
@@ -7,20 +7,20 @@ environment:
   sdk: ">=3.1.4 <4.0.0"
 
 dependencies:
-  ferry: ^0.14.2+1
-  ferry_flutter: ^0.8.1
+  ferry: ^0.15.0+1
+  ferry_flutter: ^0.9.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   freezed_annotation: ^2.4.1
-  go_router: ^12.0.0
-  gql_websocket_link: ^1.1.0
+  go_router: ^13.0.1
+  gql_websocket_link: ^2.0.1
   intl: ^0.18.1
   jwt_decoder: ^2.0.1
   provider: ^6.0.5
   built_collection: ^5.1.1
-  openapi_generator_annotations: ^4.13.1
+  openapi_generator_annotations: ^5.0.1
   chopper: ^7.0.9
   json_annotation: ^4.8.1
   built_value: ^8.7.0
@@ -35,7 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  ferry_generator: ^0.8.1
+  ferry_generator: ^0.9.1-dev.1
   build_runner: ^2.4.6
   chopper_generator: ^7.0.6
   swagger_dart_code_generator: ^2.10.4
