--- a/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
+++ b/school_track_hasura/metadata/databases/defualt/tables/tables.yaml
@@ -11,11 +11,13 @@
 - "!include public_messages.yaml"
 - "!include public_nfc_attendance.yaml"
 - "!include public_parents.yaml"
+- "!include public_period_times.yaml"
 - "!include public_qr_auth.yaml"
 - "!include public_recipient_group.yaml"
 - "!include public_recipient_user.yaml"
 - "!include public_recipients.yaml"
 - "!include public_rooms.yaml"
+- "!include public_schedules.yaml"
 - "!include public_subjects.yaml"
 - "!include public_user_group.yaml"
 - "!include public_users.yaml"
